--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "compile": "tsc -watch",
-    "start": "nodemon ./build/index.js"
+    "dev": "nodemon ./build/index.js",
+    "start": "tsc && node ./build/index.js"
   },
   "dependencies": {
     "@types/node-fetch": "^2.5.7",
