--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "12.16.3"
+  },
   "scripts": {
     "compile": "tsc -watch",
     "dev": "nodemon ./build/index.js",
-    "start": "tsc && node ./build/index.js",
+    "postinstall": "tsc",
+    "start": "node ./build/index.js",
     "build": "tsc"
   },
   "dependencies": {
