--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "compile": "tsc -watch",
-    "dev": "nodemon ./build/index.js",
-    "start": "node ./build/index.js"
+    "dev": "nodemon ./dist/index.js",
+    "start": "node ./dist/index.js"
   },
   "dependencies": {
     "@types/node-fetch": "^2.5.7",
