--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
 
   "compilerOptions": {
     "preserveConstEnums": true,
-    "outDir": "./dist",
+    "outDir": "./out",
     "noImplicitAny": false
   },
 
