--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "compile": "tsc -watch",
-    "dev": "nodemon ./dist/index.js",
-    "start": "node ./dist/index.js"
+    "dev": "nodemon ./out/index.js",
+    "start": "node ./out/index.js"
   },
   "dependencies": {
     "chalk": "^4.1.0",
