--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "chalk": "^4.1.0",
+    "cookie": "^0.4.1",
     "dotenv": "^8.2.0",
     "node-fetch": "^2.6.0",
     "tsc": "^1.20150623.0",
